{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 56,
  "lineage": "9878df7c-8b39-ce25-276d-cd94347824e7",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "tfsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1",
            "name": "mySubnet1",
            "resource_group_name": "Terraform-resource",
            "virtual_network_name": "myVnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "hs5ypxxy25pu1fcukci3nhunnh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-36-C9-14",
            "name": "myNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Terraform-resource",
            "virtual_machine_id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "dependencies": [
            "azurerm_subnet.tfsubnet1",
            "azurerm_virtual_network.tfVNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/networkSecurityGroups/TestNSG",
            "location": "westus",
            "name": "TestNSG",
            "resource_group_name": "Terraform-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "webport80",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "webout80",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "webport8080",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/networkSecurityGroups/TestNSG/securityRules/webport80",
            "name": "webport80",
            "network_security_group_name": "TestNSG",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/networkSecurityGroups/TestNSG/securityRules/webport8080",
            "name": "webport8080",
            "network_security_group_name": "TestNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/networkSecurityGroups/TestNSG/securityRules/webout80",
            "name": "webout80",
            "network_security_group_name": "TestNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/publicIPAddresses/pubip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "pubip1",
            "resource_group_name": "Terraform-resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1",
            "name": "mySubnet1",
            "resource_group_name": "Terraform-resource",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_virtual_network.tfVNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet2",
            "name": "mySubnet2",
            "resource_group_name": "Terraform-resource",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_virtual_network.tfVNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfVNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "de87bf3c-e7f8-4ddf-9454-5091d69e8d6f",
            "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "westus",
            "name": "myVnet",
            "resource_group_name": "Terraform-resource",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1",
                "name": "mySubnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0306cb34-f0d6-40b9-b4e3-0cc6c24dd240/resourceGroups/Terraform-resource/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet2",
                "name": "mySubnet2"
              }
            ],
            "tags": {
              "environment": "terraform"
            },
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}